2016-03-22  Per Arne Vollan  <peavo@outlook.com>

        [Win] [64-bit] Remove MSVC 2013 FMA3 Bug Workaround
        https://bugs.webkit.org/show_bug.cgi?id=141499

        Reviewed by Brent Fulgham.

        As we have moved on to VS2015, this workaround is no longer needed.

        * DumpRenderTree/cg/ImageDiffCG.cpp:
        (main):
        * DumpRenderTree/win/DumpRenderTree.cpp:
        (main):
        * DumpRenderTree/win/ImageDiffCairo.cpp:
        (main):
        * MiniBrowser/win/Common.cpp:
        (DllMain):
        * TestWebKitAPI/win/main.cpp:
        (main):
        * win/DLLLauncher/DLLLauncherMain.cpp:
        (wWinMain):

2016-03-22  Yusuke Suzuki  <utatane.tea@gmail.com>

        [JSC] ASMBench cannot be run without JSBENCH_PATH
        https://bugs.webkit.org/show_bug.cgi?id=155751

        Reviewed by Saam Barati.

        Check ASMBENCH_PATH instead of JSBENCH_PATH for ASMBench files.

        * Scripts/run-jsc-benchmarks:

2016-03-21  Brent Fulgham  <bfulgham@apple.com>

        [Win] SharedBuffer::copy() can cause a segmentation fault.
        https://bugs.webkit.org/show_bug.cgi?id=155739

        Reviewed by Ryosuke Niwa.

        * TestWebKitAPI/PlatformWin.cmake: Build and run the
        SharedBuffer tests.

2016-03-22  Csaba Osztrogonác  <ossy@webkit.org>

        [buildbot] Move ARM Linux bots to JSCOnly port
        https://bugs.webkit.org/show_bug.cgi?id=155655

        Reviewed by Lucas Forschler.

        * BuildSlaveSupport/build.webkit.org-config/config.json:
        * BuildSlaveSupport/build.webkit.org-config/master.cfg:
        (ConfigureBuild.__init__):
        (appendCustomBuildFlags):
        (CompileJSCOnly):
        (Factory.__init__):
        (BuildAndRemoteJSCTestsFactory):
        (BuildAndRemoteJSCTestsFactory.__init__):
        * BuildSlaveSupport/build.webkit.org-config/mastercfg_unittest.py:
        * BuildSlaveSupport/clean-build:
        (main):

2016-03-21  Brent Fulgham  <bfulgham@apple.com>
