@@ -1702,6 +1702,11 @@
             "keith_miller_"
          ]
       },
+      "Keith Rollin" : {
+         "emails" : [
+            "krollin@apple.com"
+         ]
+      },
       "Keishi Hattori" : {
          "emails" : [
             "keishi@webkit.org"
